Thread print number in specified oreder